--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
         src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
         crossorigin="anonymous"></script>
-        <script src="script.js"></script>
         <link rel="stylesheet" href="style.css"></link>
+        <script src="script.js"></script>
+        
     </head>
     <body onkeydown="(event.keyCode)" onkeyup="(event.keyCode)">
-        <div id="airport"></div>
+        <div id="airport">
+            <!-- <img src="runway.jpg" id="runway" alt="runway"> -->
+        </div>
         <img src="plane-right.png" id="plane">
     </body>
     
