--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css"></link>
-        <script src="script.js"></script>
-        
+        <script src="script.js"></script>   
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </head>
     <body onkeydown="(event.keyCode)" onkeyup="(event.keyCode)">
         <div id="airport">
-            <!-- <img src="runway.jpg" id="runway" alt="runway"> -->
+            <div class="points">points: 
+                <span id="ringcount">
+                    0
+                </span>
+            </div>
         </div>
         <img src="plane-right.png" id="plane">
     </body>
-    
 </html>
