Fixes to the margins
Fixed the margins and added a refresh button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 </span>
             </div>
         </div>
+        <button class="refresh" onClick="window.location.reload();">Restart game</button>
         <img src="plane-right.png" id="plane">
     </body>
 </html>
